--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1>Bienvenido a nuestro Portal Oficial</h1>
-<p>Estamos muy contentos de tenerte aqui</p>
+<h1>Hola mundo Corporativo</h1>
+<p>Este es el mensaje inicial de nuestra página</p>
